# icfpc2025

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  REPORT.md  ahc.toml  d3js.html  run  tos-debug-wa.txt
.cloudbuild/: deploy-server.yaml  deploy.yaml
.gemini/: config.yaml  styleguide.md
.github/: copilot-instructions.md
.github/workflows/: lint.yml  test.yml
configs/: id_ed25519.encrypted  id_ed25519.pub  nginx.conf  service_account.json.encrypted
docker/: Makefile  builder.Dockerfile  phpmyadmin.Dockerfile  runner.Dockerfile  server.Dockerfile  tools.Dockerfile
docs/: dashboard.html  repository_report.md  style.css  wata_sat6_parallel.md
evo/: .gitignore
evo/exp1/: evaluate.py  initial.rs  main.py  prompt.md
evo/exp2/: evaluate.py  evaluate_24.py  initial.rs  main.py  prompt.md
local_tester/: Cargo.toml
local_tester/src/: main.rs
localtest/: in.csv
localtest/in/: 006_primus.json  012_secundus.json  018_vau.json  024_quartus.json  030_quintus_3.json  explore_003_0.json  explore_030_0.json  rand_03.txt  rand_06.txt  rand_12.txt  rand_18.txt  rand_24.txt  rand_30.txt  vau.jsonl
localtest/in/aleph/: 000.json  001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  021.json  022.json  023.json  024.json  025.json  026.json  027.json  028.json  029.json  030.json  031.json  032.json  033.json  034.json  035.json  036.json  037.json  038.json  039.json  (+62 more)
localtest/in/beth/: 000.json  001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json
localtest/in/daleth/: 000.json  001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json
localtest/in/gimel/: 000.json  001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json
localtest/in/he/: 000.json  001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  021.json
localtest/in/hhet/: 000.json  001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json
localtest/in/iod/: 000.json  001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json
localtest/in/primus/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json
localtest/in/quintus/: 000.json  (+76 more)
scripts/: deploy_binaries.sh  dump-localtest-in.py  run_many.sh  run_repeated.sh  setup-instance.sh
src/: api.rs  client.rs  gce.rs  judge.rs  layered.rs  lib.rs  lock.rs  lock_guard.rs  problems.json  problems.rs  routes.rs  solve_no_marks.rs  sql.rs  sql_async.rs  svg.rs  www.rs
src/executor/: lock.rs  mod.rs  run.rs
src/gce/: auth.rs  client.rs  defaults.rs  mod.rs  types.rs
src/gcp/: auth.rs  mod.rs  types.rs
src/gcs/: client.rs  mod.rs
src/mapgen/: random.rs
src/www/: mod.rs  utils.rs
static/: d3-visualizer.js  style.css
submit/: in.csv
submit/in/: aleph.txt  beth.txt  daleth.txt  gimel.txt  he.txt  hhet.txt  iod.txt  primus.txt  probatio.txt  quartus.txt  quintus.txt  secundus.txt  tertius.txt  teth.txt  vau.txt  zain.txt
texts/: tos-comb.txt
vis/: Cargo.toml
(+70 files in other folders)
