[package]
name = "icfpc2025"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio", "reqwest", "actix-web", "actix-files", "mysql", "resvg"]

[dependencies]
itertools = "0.14.0"
once_cell = "1.21.3"
# rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
base64 = "0.22.1"
jsonwebtoken = "9.3.1"
indicatif = "0.18.0"
reqwest = { version = "0.12.23", features = ["json"], optional = true }
tokio = { version = "1.47.1", features = ["full"], optional = true }
svg = "0.18.0"
anyhow = "1.0.99"
actix-web = { version = "4.11.0", optional = true }
actix-files = { version = "0.6.7", optional = true }
handlebars = "6.3.2"
mysql = { version = "26.0.1", optional = true }
resvg = { version = "0.45.1", optional = true }
chrono-humanize = "0.2.3"
chrono = "0.4.41"
num-bigint = "0.4.6"
clap = { version = "4.5.47", features = ["derive"] }
num-traits = "0.2.19"
num = { version = "0.4.3", features = ["num-bigint"] }

fs_extra = "1.3.0"
rand = { version = "=0.8.5", features = ["small_rng", "min_const_gen"] }
getrandom = { version = "=0.2.15", features = ["js"] }
rand_chacha = "=0.3.1"
rand_core = "=0.6.4"
rand_hc = "=0.3.2"
rand_pcg = "=0.3.1"
rand_distr = "=0.4.3"
rustc-hash = "=2.1.1"
rayon = "1.11.0"

[profile.release]
debug = true
