[package]
name = "ahc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.7"
actix-web = "4.11.0"
chrono = "0.4.41"
clap = { version = "4.5.47", features = ["derive"] }
duct = "1.1.0"
fs2 = "0.4.3"
futures = "0.3.31"
handlebars = "6.3.2"
indicatif = "0.18.0"
itertools = "0.14.0"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
tempfile = "3.21.0"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
